  for creating modules with names containing dashes has been added.

Bugs fixed
----------
- bug 1566 - WiFi SNR tag improvements
- Bug 1582 - IPv6 raw socket return value is not like Linux socket
- bug 1585 - Length field of A-MSDU subframe header endianness
- Bug 1409 - Add an attribute "SystemId" to configure the ID for MPI
- Bug 1612 - pyviz (visualizer) will not be installed
- Bug 1623 - pybindgen rev809 is not able to build after Ubuntu 1210

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.16
============

Availability
------------
This release is available from: 
http://www.nsnam.org/release/ns-allinone-3.16.tar.bz2

Supported platforms
-------------------
- Fedora Core 17 (32/64 bit) with g++-4.7.0
- Fedora Core 15 (64 bit) with g++-4.6.3
- Ubuntu 12.10 (32/64 bit) with g++-4.6.3
- Ubuntu 12.04 (32/64 bit) with g++-4.6.3
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- OS X Mountain Lion 10.8.3 with g++-4.2.1
- FreeBSD 8.2 (32 bit) with g++-4.2.1
- Cygwin 1.7.9-1 with g++-4.5.3

New user-visible features
-------------------------
- Support several new LTE MAC schedulers developed in GSoC 2012 project. 
  Those schedulers include FD-MT, TD-MT, TTA, FD-BET, TD-BET, FD-TBFQ,
  TD-TBFQ, PSS. Here, FD and TD mean frequency domain and time domain 
  respectively.
- It's now possible to use distcc when building ns-3 by using
  $ CXX='distcc g++' ./waf configure
  $ ./waf build
- Support topology generation with the (external) BRITE topology generation 
  tool

Bugs fixed
----------
- bug  555 - DCF immediate access
- bug  976 - wifi-wired-bridging regression test fails because of 
             rounding errors in mobility model
- bug 1055:  Wrong UAN's Thorp absorption loss model formula
- bug 1284 - ./test.py performance tests do not exist
- bug 1324 - ns3tcp-cwnd-test-suite.cc test failing
- bug 1340 - ns3tcp-loss-suite.cc tests failing