@@ -36,6 +36,7 @@ Bugs fixed
 - Bug 1582 - IPv6 raw socket return value is not like Linux socket
 - bug 1585 - Length field of A-MSDU subframe header endianness
 - Bug 1409 - Add an attribute "SystemId" to configure the ID for MPI
+- Bug 1601 -  RttEstimator doesn't set the m_currentEstimatedRtt to m_initialEstimatedRtt on creation
 - Bug 1612 - pyviz (visualizer) will not be installed
 - Bug 1623 - pybindgen rev809 is not able to build after Ubuntu 1210
 
